JDBC connection - load DB metadata + added Import Worker

--- a/KrokiMockupTool/src/kroki/resources/KrokiMockupToolApp.properties
+++ b/KrokiMockupTool/src/kroki/resources/KrokiMockupToolApp.properties
@@ -248,6 +248,12 @@ action.help.description=Application help
 action.dbsetting.name=Set database settings
 action.dbsetting.description=Set up database connections parameters
 
+action.dbsetting.jdbc.name=Set database settings (JDBC)
+action.dbsetting.jdbc.description=Set up database connections parameters using jdbc
+
+action.db.import.name = Import from database
+action.db.import.description = Import database tables as Kroki project
+
 action.newPackage.name=New Subsystem
 action.newPackage.description=Creates new bussiness subsystem
 action.newPackage.smallIcon=/kroki/resources/images/box--plus.png
